# geometry

./: .bazelrc  .clang-tidy  BUILD.bazel  README.md  WORKSPACE.bazel  buildbuddy.yaml
.github/actions/ci-env-setup/: action.yml
.github/workflows/: check.yml  ci.bazelrc  repo-cache.yml
geometry/: BUILD.bazel  expression_template.hpp  geometry.hpp  type_metaprogramming.hpp
geometry/expression_template/: enable_ring_operations.hpp  flattened.hpp  is_associative.hpp  leaf.hpp  multiplies.hpp  op.hpp  plus.hpp
geometry/src/: algebra.hpp  algebra_type.hpp  common_algebra_type.hpp  dual.hpp  exterior_product.hpp  geometric_product.hpp  get.hpp  interior_product.hpp  multivector_for.hpp  regressive_product.hpp  sum.hpp  to_multivector.hpp  type_list.hpp
geometry/src/detail/: all_same.hpp  blade_list.hpp  bladewise_transform.hpp  construct_if_convertible.hpp  contract_dimensions.hpp  factorial.hpp  geometric_product.hpp  get_type.hpp  index_constant_sequence.hpp  multivector_product.hpp  ordered.hpp  ordered_dimensions.hpp  pending_dimensions_list.hpp  rebind_args_into.hpp  sort_dimensions.hpp  strictly_increasing.hpp  type_flatten.hpp  type_for_each.hpp  type_list.hpp  type_sort.hpp  type_unique.hpp
geometry/type_metaprogramming/: cartesian_product.hpp  convert_to_list.hpp  convert_to_sequence.hpp  empty.hpp  flatten.hpp  get_type.hpp  index_constant_list.hpp  index_constant_sequence.hpp  last.hpp  list.hpp  rebind_into.hpp  same.hpp  sort.hpp  transform.hpp  unique.hpp
test/: BUILD.bazel  algebra_blade_test.cpp  algebra_dual_test.cpp  algebra_exterior_product_test.cpp  algebra_get_test.cpp  algebra_interior_product_test.cpp  algebra_multivector_test.cpp  algebra_pruned_expressions_test.cpp  algebra_regressive_product_test.cpp  algebra_test.cpp  dummy_test.cpp  test_same.hpp
tools/: BUILD.bazel
