package(default_visibility = ["//:__subpackages__"])

exports_files(["README.md"])

filegroup(
    name = "format_config",
    srcs = [".clang-format"],
)

filegroup(
    name = "tidy_config",
    srcs = [".clang-tidy"],
)

alias(
    name = "geometry",
    actual = "//geometry",
    visibility = ["//visibility:public"],
)
