load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "geometry",
    srcs = [
        "src/algebra.hpp",
        "src/detail/all_same.hpp",
        "src/detail/contract_dimensions.hpp",
        "src/detail/ordered.hpp",
        "src/detail/strictly_increasing.hpp",
        "src/detail/type_list.hpp",
        "src/detail/type_sort.hpp",
    ],
    hdrs = ["geometry.hpp"],
    visibility = ["//:__subpackages__"],
)
