load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "type_metaprogramming",
    srcs = [
        "type_metaprogramming/cartesian_product.hpp",
        "type_metaprogramming/convert_to_list.hpp",
        "type_metaprogramming/convert_to_sequence.hpp",
        "type_metaprogramming/empty.hpp",
        "type_metaprogramming/flatten.hpp",
        "type_metaprogramming/get_type.hpp",
        "type_metaprogramming/index_constant_list.hpp",
        "type_metaprogramming/last.hpp",
        "type_metaprogramming/list.hpp",
        "type_metaprogramming/rebind_into.hpp",
        "type_metaprogramming/same.hpp",
        "type_metaprogramming/sort.hpp",
        "type_metaprogramming/transform.hpp",
        "type_metaprogramming/unique.hpp",
    ],
    hdrs = ["type_metaprogramming.hpp"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "expression_template",
    srcs = [
        "expression_template/enable_ring_operations.hpp",
        "expression_template/flattened.hpp",
        "expression_template/is_associative.hpp",
        "expression_template/leaf.hpp",
        "expression_template/multiplies.hpp",
        "expression_template/op.hpp",
        "expression_template/plus.hpp",
    ],
    hdrs = ["expression_template.hpp"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "geometry",
    srcs = [
        "src/algebra.hpp",
        "src/algebra_type.hpp",
        "src/common_algebra_type.hpp",
        "src/detail/blade_list.hpp",
        "src/detail/bladewise_transform.hpp",
        "src/detail/construct_if_convertible.hpp",
        "src/detail/contract_dimensions.hpp",
        "src/detail/factorial.hpp",
        "src/detail/multivector_product.hpp",
        "src/detail/ordered.hpp",
        "src/detail/ordered_dimensions.hpp",
        "src/detail/pending_dimensions_list.hpp",
        "src/detail/strictly_increasing.hpp",
        "src/dual.hpp",
        "src/exterior_product.hpp",
        "src/geometric_product.hpp",
        "src/get.hpp",
        "src/multivector_for.hpp",
        "src/regressive_product.hpp",
        "src/sum.hpp",
        "src/to_multivector.hpp",
        "src/type_list.hpp",
    ],
    hdrs = ["geometry.hpp"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":expression_template",
        ":type_metaprogramming",
    ],
)
