load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "test_same",
    hdrs = ["test_same.hpp"],
    deps = ["@skytest"],
)

cc_test(
    name = "algebra_blade_test",
    size = "small",
    srcs = ["algebra_blade_test.cpp"],
    deps = [
        "//:geometry",
        "@skytest",
    ],
)

cc_test(
    name = "algebra_multivector_test",
    size = "small",
    srcs = ["algebra_multivector_test.cpp"],
    deps = [
        "//:geometry",
        "@skytest",
    ],
)

cc_test(
    name = "algebra_pruned_expressions_test",
    size = "small",
    srcs = ["algebra_pruned_expressions_test.cpp"],
    deps = [
        ":test_same",
        "//:geometry",
        "@skytest",
    ],
)
